<resources>
    <!--common strings-->
    <string name="app_name">Rock Android</string>
    <string name="color">color</string>
    <string name="welcome_message">Welcome to Rock Android!</string>
    <string name="enter_dic">Merriam Webster Dictionary</string>
    <string name="enter_nf">News Feed</string>
    <string name="enter_fst">Flight Status Tracker</string>
    <string name="enter_nyt">New York Times Article Search</string>
    <string name="delete_warning">Do you really want to delete? </string>
    <string name="help">Help </string>
    <string name="home">Home Page </string>

    <!--Kevin Strings -->
    <string name="enter_nyt_kn">Article Search</string>
    <string name="nyt_save_kn">Save article</string>
    <string name="nyt_delete_kn">Delete article</string>
    <string name="delete_article_kn">Do you want to delete this Article </string>
    <string name="nyt_saved_article">View Saved Article </string>
    <string name="nyt_search">Enter Search Article </string>
    <string name="nyt_article_saved">YOUR SAVED BOOKMARKS</string>
    <string name="nyt_back_menu">Back To Menu</string>
    <string name="nyt_delete_article">Delete Article</string>
    <string name="nyt_go_back">Go Back</string>

    <!--Ryan Strings-->
    <string name="welcome_msg_dic_rl">Welcome to Merriam Webster Dictionary</string>
    <string name="input_hint_dic_rl">Please enter the word you want to search</string>
    <string name="search_btn_dic_rl">search</string>
    <string name="save_btn_dic_rl">save</string>
    <string name="delete_btn_dic_rl">delete</string>
    <string name="refresh_btn_dic_rl">refresh</string>
    <string name="view_saved_words_btn_dic_rl">view saved words</string>
    <string name="welcome_msg_saved_words_list_dic_rl">Below are the words you saved</string>
    <string name="prevos_words_list_dic_rl">Below are the last 20 words you searched</string>
    <string name="parts_of_speech_dic_rl">Parts Of Speech:</string>
    <string name="definition_dic_rl">Definition:</string>
    <string name="example_sentence_rl">Example sentence:</string>
    <string name="to_sub_main_rl">Dictionary Home Page</string>

    <!--Quenny Strings-->
    <string name="title_qy">Flight Status tracker</string>
    <string name="typeHere_qy">Please Input Airport Code </string>
    <string name="search_qy">Search </string>
    <string name="buttonView_qy">View Saved Flight Information </string>
    <string name="buttonRefresh_qy">Refresh </string>
    <string name="flightNo_qy">Flight Number </string>
    <string name="flightStatus_qy">Status </string>
    <string name="flightNoD_qy">Flight Number </string>
    <string name="location_qy">Location </string>
    <string name="speed_qy">Speed </string>
    <string name="altitude_qy">Altitude </string>
    <string name="status_qy">Status </string>
    <string name="save_btn_qy">Save </string>
    <string name="delete_btn_qy">Delete </string>
    <string name="back_btn_qy">Previous Page</string>

    <!--Hung Strings-->
    <string name="welcome_hd">WELCOME TO THE NEWS FEED</string>
    <string name="search_hd">Search</string>
    <string name="type_search_hd">Enter search term</string>
    <string name="save_article_hd">Save</string>
    <string name="del_article_hd">Delete</string>
    <string name="return_article_hd">Return</string>
    <string name="help_hd">Help</string>
    <string name="title_hd">Title: </string>
    <string name="uuid_hd">uuid: </string>
    <string name="save_hd">uuid: </string>
    <string name="search_article_hd">Search</string>




</resources>
