<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <android.support.v4.widget.ContentLoadingProgressBar
        android:id="@+id/progress_Bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="visible" />
    <TextView
        android:id="@+id/flightNoD_qy_qy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/flightNoD_qy" />

    <TextView
        android:id="@+id/location_qy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/location_qy" />

    <TextView
        android:id="@+id/speed_qy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/speed_qy" />

    <TextView
        android:id="@+id/altitude_qy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/altitude_qy" />

    <TextView
        android:id="@+id/Status_qy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status_qy" />

    <Button
        android:id="@+id/save_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_btn_qy" />
    <Button
        android:id="@+id/delete_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_btn_qy" />
</LinearLayout>