<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/go_flight"
        android:title="@string/enter_fst"
        android:icon="@drawable/flight_tracker"
        android:orderInCategory="200"
        app:showAsAction="always"/>

    <item android:id="@+id/go_news_feed"
        android:title="@string/enter_nf"
        android:icon="@drawable/news_feed"
        android:orderInCategory="100"
        app:showAsAction="always"/>

    <item android:id="@+id/go_dic"
        android:title="@string/enter_dic"
        android:icon="@drawable/dictionary"
        android:orderInCategory="300"
        app:showAsAction="always"/>

    <item android:id="@+id/go_help"
        android:title="@string/help"
        android:orderInCategory="400"
        app:showAsAction="never"/>
</menu>