<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_message" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <Button
            android:id="@+id/enter_dic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_dic" />

        <Button
            android:id="@+id/enter_fst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_fst" />

        <Button
            android:id="@+id/enter_nf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_nf" />

        <Button
            android:id="@+id/enter_nyt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_nyt" />
    </LinearLayout>

</LinearLayout>