<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".queeny.MainActivityFlightStatusTracker">

    <TextView
        android:id="@+id/title1_qy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title_qy" />


    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/typeHere_qy" />

    <Button
        android:id="@+id/buttonSeach_qy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_qy" />

    <Button
        android:id="@+id/buttonView_qy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonView_qy" />

    <Button
        android:id="@+id/buttonRefresh_qy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/buttonRefresh_qy" />

    <android.support.v4.widget.ContentLoadingProgressBar
        android:id="@+id/progress_Bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="visible" />

    <ListView
        android:id="@+id/FlightList_qy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



</LinearLayout>